--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,9 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/bin/",
             "environment": [],
+            "MIMode": "gdb",
+            "miDebuggerPath": "/usr/bin/gdb",
+            "preLaunchTask": "Build All Components"
         }
     ]
 }
