--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,7 @@
   "C_Cpp.vcFormat.space.pointerReferenceAlignment": "left",
   "C_Cpp.clang_format_sortIncludes": false,
   "C_Cpp.vcFormat.indent.namespaceContents": true,
-  "editor.cursorStyle": "block",
+  "editor.cursorStyle": "underline-thin",
   "editor.tabCompletion": "on",
   "files.associations": {
     "test.h": "c",
