--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
     "typeinfo": "c",
     "windowsx.h": "c",
     "vulkan_platform.h": "c",
-    "renderer_frontend.h": "c"
-  }
+    "renderer_frontend.h": "c",
+    "system_error": "c"
+}
 }
