--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,35 +1,39 @@
 {
-  "workbench.colorTheme": "Abyss",
-  "editor.minimap.enabled": false,
-  "terminal.integrated.fontWeight": "1",
-  "editor.fontFamily": "Liberation Mono",
-  "editor.fontWeight": "1",
-  "workbench.editor.showTabs": "multiple",
-  "workbench.colorCustomizations": {
-    "editorCursor.foreground": "#00ff33",
-    "editor.lineHighlightBackground": "#111144"
-  },
-  "workbench.statusBar.visible": true,
-  "editor.lineNumbers": "on",
-  "C_Cpp.clang_format_style": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0, NamespaceIndentation: All}",
-  "C_Cpp.vcFormat.newLine.beforeOpenBrace.block": "sameLine",
-  "C_Cpp.vcFormat.newLine.beforeOpenBrace.type": "sameLine",
-  "C_Cpp.vcFormat.newLine.beforeOpenBrace.function": "sameLine",
-  "C_Cpp.vcFormat.space.pointerReferenceAlignment": "left",
-  "C_Cpp.clang_format_sortIncludes": false,
-  "C_Cpp.vcFormat.indent.namespaceContents": true,
-  "editor.cursorStyle": "underline-thin",
-  "editor.tabCompletion": "on",
-  "files.associations": {
-    "test.h": "c",
-    "vulkan.h": "c",
-    "vulkan_core.h": "c",
-    "vk_platform.h": "c",
-    "type_traits": "c",
-    "typeinfo": "c",
-    "windowsx.h": "c",
-    "vulkan_platform.h": "c",
-    "renderer_frontend.h": "c",
-    "system_error": "c"
-}
+    "workbench.colorTheme": "Abyss",
+    "editor.minimap.enabled": false,
+    "terminal.integrated.fontWeight": "1",
+    "editor.fontFamily": "Liberation Mono",
+    "editor.fontWeight": "1",
+    "workbench.editor.showTabs": "multiple",
+    "workbench.colorCustomizations": {
+        "editorCursor.foreground": "#00ff33",
+        "editor.lineHighlightBackground": "#111144"
+    },
+    "workbench.statusBar.visible": true,
+    "editor.lineNumbers": "on",
+    "C_Cpp.clang_format_style": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0, NamespaceIndentation: All}",
+    "C_Cpp.vcFormat.newLine.beforeOpenBrace.block": "sameLine",
+    "C_Cpp.vcFormat.newLine.beforeOpenBrace.type": "sameLine",
+    "C_Cpp.vcFormat.newLine.beforeOpenBrace.function": "sameLine",
+    "C_Cpp.vcFormat.space.pointerReferenceAlignment": "left",
+    "C_Cpp.clang_format_sortIncludes": false,
+    "C_Cpp.vcFormat.indent.namespaceContents": true,
+    "editor.cursorStyle": "underline-thin",
+    "editor.tabCompletion": "on",
+    "files.associations": {
+        "*.h": "c",
+        "*.cpp": "cpp",
+        "*.c": "c",
+        "test.h": "c",
+        "vulkan.h": "c",
+        "vulkan_core.h": "c",
+        "vk_platform.h": "c",
+        "type_traits": "c",
+        "typeinfo": "c",
+        "windowsx.h": "c",
+        "vulkan_platform.h": "c",
+        "renderer_frontend.h": "c",
+        "system_error": "c",
+        "random": "c"
+    }
 }
