feat: Add association for iosfwd header in settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "vulkan_platform.h": "c",
         "renderer_frontend.h": "c",
         "system_error": "c",
-        "random": "c"
+        "random": "c",
+        "iosfwd": "c"
     }
 }
