feat: Add association for functional header in VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "renderer_frontend.h": "c",
         "system_error": "c",
         "random": "c",
-        "iosfwd": "c"
+        "iosfwd": "c",
+        "functional": "c"
     }
 }
