feat: Add additional file associations for C++ standard library headers in VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,8 @@
         "system_error": "c",
         "random": "c",
         "iosfwd": "c",
-        "functional": "c"
+        "functional": "c",
+        "string": "c",
+        "format": "c"
     }
 }
