feat: Add missing association for vulkan_types.inl in VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
         "iosfwd": "c",
         "functional": "c",
         "string": "c",
-        "format": "c"
+        "format": "c",
+        "vulkan_types.inl": "c"
     }
 }
