--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "editor.fontWeight": "1",
     "workbench.editor.showTabs": "multiple",
     "workbench.colorCustomizations": {
-        "editorCursor.foreground": "#00ff33",
+        "editorCursor.foreground": "#ea00ff",
         "editor.lineHighlightBackground": "#111144"
     },
     "workbench.statusBar.visible": true,
