feat: Add additional file associations for C++ standard library headers in settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,12 @@
         "functional": "c",
         "string": "c",
         "format": "c",
-        "vulkan_types.inl": "c"
+        "vulkan_types.inl": "c",
+        "charconv": "c",
+        "expected": "c",
+        "optional": "c",
+        "array": "c",
+        "tuple": "c",
+        "utility": "c"
     }
 }
