fix: Add missing C++ standard library headers to file associations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,9 @@
         "optional": "c",
         "array": "c",
         "tuple": "c",
-        "utility": "c"
+        "utility": "c",
+        "compare": "c",
+        "complex": "c",
+        "variant": "c"
     }
 }
