feat: Update VSCode settings and tasks configuration for improved build process

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "utility": "c",
         "compare": "c",
         "complex": "c",
-        "variant": "c"
+        "variant": "c",
+        "sstream": "c"
     }
 }
