--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,12 +3,12 @@
         {
             "label": "Build All Components",
             "dependsOn": [
-                "Build GLSL 2 SPV",
+                // "Build GLSL 2 SPV",
                 "Build Engine",
                 "Build Testbed",
                 "Build Everything",
-                "Test Everything",
-                "Run Tests of Everything"
+                // "Test Everything",
+                // "Run Tests of Everything"
             ],
             "dependsOrder": "sequence",
             "problemMatcher": []
