--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -72,10 +72,10 @@
             "type": "shell",
             "label": "Run Tests",
             "windows": {
-                "command": "${workspaceFolder}/test/test.bat"
+                "command": "${workspaceFolder}/tests/build.bat"
             },
             "linux": {
-                "command": "${workspaceFolder}/test/test.sh"
+                "command": "${workspaceFolder}/tests/build.sh"
             },
             "options": {
                 "cwd": "${workspaceFolder}",
